# handlers/points_handler.go
@@ -10,21 +10,22 @@ import (
 	"github.com/gorilla/mux"
 )
 
-//	@Summary		Update a user(s) points
-//	@Description	Update a user(s)' points in our backend by unique user Snowflake (ID)
-//	@Tags			Points
-//	@Accept			json
-//	@Produce		json
-//	@Param			guild_id	path		string		true	"Guild ID"
-//	@Param			point_event	path		string		true	"Point event"
-//	@Param			guild		body		models.User	true	"User"
-//	@Success		200			{object}	models.User
-//	@Failure		400			{object}	models.Empty
-//	@Failure		401			{object}	models.Empty
-//	@Failure		409			{object}	models.Empty
-//	@Failure		429			{object}	models.Empty
-//	@Failure		500			{object}	models.Empty
-//	@Router			/api/v1/guilds/{guild_id}/users/{user_ids}/points/{point_event} [PUT]
+// @Summary		Update a user(s) points
+// @Description	Update a user(s)' points in our backend by unique user Snowflake (ID)
+// @Tags			Points
+// @Accept			json
+// @Produce		json
+// @Param			guild_id	path		string		true	"Guild ID"
+// @Param			user_ids	path		[]string	true	"User IDs"
+// @Param			point_event	path		string		true	"Point event"
+// @Param			guild		body		models.User	true	"User"
+// @Success		200			{object}	models.User
+// @Failure		400			{object}	models.Empty
+// @Failure		401			{object}	models.Empty
+// @Failure		409			{object}	models.Empty
+// @Failure		429			{object}	models.Empty
+// @Failure		500			{object}	models.Empty
+// @Router			/api/v1/guilds/{guild_id}/users/{user_ids}/points/{point_event} [PUT]
 func UpdatePoints(w http.ResponseWriter, r *http.Request) {
 	jw := utils.NewJsonWriter(w, r, http.StatusOK)
 
@@ -44,21 +45,22 @@ func UpdatePoints(w http.ResponseWriter, r *http.Request) {
 	jw.WriteResponse(user)
 }
 
-//	@Summary		Update a user(s) points
-//	@Description	Update a user(s)' points in our backend by unique user Snowflake (ID)
-//	@Tags			Points
-//	@Accept			json
-//	@Produce		json
-//	@Param			guild_id	path		string		true	"Guild ID"
-//	@Param			points		path		string		true	"Points"
-//	@Param			guild		body		models.User	true	"User"
-//	@Success		200			{object}	models.User
-//	@Failure		400			{object}	models.Empty
-//	@Failure		401			{object}	models.Empty
-//	@Failure		409			{object}	models.Empty
-//	@Failure		429			{object}	models.Empty
-//	@Failure		500			{object}	models.Empty
-//	@Router			/api/v1/guilds/{guild_id}/users/{user_ids}/points/custom/{points} [PUT]
+// @Summary		Update a user(s) points
+// @Description	Update a user(s)' points in our backend by unique user Snowflake (ID)
+// @Tags			Points
+// @Accept			json
+// @Produce		json
+// @Param			guild_id	path		string		true	"Guild ID"
+// @Param			user_ids	path		[]string	true	"User ID"
+// @Param			points		path		string		true	"Points"
+// @Param			guild		body		models.User	true	"User"
+// @Success		200			{object}	models.User
+// @Failure		400			{object}	models.Empty
+// @Failure		401			{object}	models.Empty
+// @Failure		409			{object}	models.Empty
+// @Failure		429			{object}	models.Empty
+// @Failure		500			{object}	models.Empty
+// @Router			/api/v1/guilds/{guild_id}/users/{user_ids}/points/custom/{points} [PUT]
 func UpdatePointsCustom(w http.ResponseWriter, r *http.Request) {
 	jw := utils.NewJsonWriter(w, r, http.StatusOK)
 
